# coda

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tasks.py
config/: __init__.py  settings.py
examples/sample_service/: .gitignore  README.md  requirements.txt
examples/sample_service/app/: __init__.py  main.py
examples/sample_service/tests/: test_health.py
sandbox/: Dockerfile
scripts/: demo_repo_analysis.py  demo_run.py  demo_workflow.py
src/: __init__.py
src/coda/: __init__.py  main.py
src/coda/agents/: __init__.py  apply_patch.py  coder.py  planner.py  repo_gist.py  tester.py
src/coda/core/: __init__.py  git_strategy.py  graph.py  indexer.py  llm_client.py  llm_pipeline.py  models.py  tree_sitter_chunker.py
tests/: __init__.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_llm_client.py  test_models.py
